# SimulProject

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  orbits.txt
include/glad/: glad.h
include/physics/: body.hpp  solver.hpp
include/render/: renderer.hpp
include/utils/: constants.hpp
shaders/: orbit.vert
src/: glad.c  main.cpp  renderer.cpp  solver.cpp
